Adding /distribution/{name}/json endpoint to contact registry
