# api/types/registry/registry.go
@@ -3,6 +3,9 @@ package registry
 import (
 	"encoding/json"
 	"net"
+
+	"github.com/docker/distribution/manifest/manifestlist"
+	digest "github.com/opencontainers/go-digest"
 )
 
 // ServiceConfig stores daemon registry services configuration.
@@ -101,4 +104,14 @@ type SearchResults struct {
 	NumResults int `json:"num_results"`
 	// Results is a slice containing the actual results for the search
 	Results []SearchResult `json:"results"`
+}
+
+// DistributionInspect describes the result obtained from contacting the
+// registry to retrieve image metadata
+type DistributionInspect struct {
+	// Digest is the content addressable digest for the image on the registry
+	Digest digest.Digest
+	// Platforms contains the list of platforms supported by the image,
+	// obtained by parsing the manifest
+	Platforms []manifestlist.PlatformSpec
 }
